--- a/blog/templates/loan/loan_detail.html
+++ b/blog/templates/loan/loan_detail.html
@@ -50,30 +50,30 @@
     </div>
 
     <div class="card mt-4">
-        <div class="card-header bg-dark text-white">
+        <div class="card-header">
             <h5>Historial de Pagos</h5>
         </div>
         <div class="card-body">
-            {% if loan.get_payment_history %}
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Fecha</th>
-                            <th>Monto</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for payment in loan.get_payment_history %}
-                        <tr>
-                            <td>{{ payment.payment_date|date:"d/m/Y H:i" }}</td>
-                            <td>${{ payment.amount }}</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            {% else %}
-                <p class="text-muted">No hay pagos registrados.</p>
-            {% endif %}
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Fecha</th>
+                        <th>Monto</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for payment in loan.payments.all %}
+                    <tr>
+                        <td>{{ payment.payment_date }}</td>
+                        <td>${{ payment.amount }}</td>
+                    </tr>
+                    {% empty %}
+                    <tr>
+                        <td colspan="2" class="text-center">No hay pagos registrados.</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
