--- a/templates/base.html
+++ b/templates/base.html
@@ -955,6 +955,7 @@
     </style>
     
     {% block extra_css %}{% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <!-- App Shell Loading Animation -->
